--- a/.gitignore
+++ b/.gitignore
@@ -7,14 +7,16 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+.yarn
+.yarn/*
 node_modules
 dist
 dist-ssr
 *.local
 
 # Editor directories and files
+.vscode
 .vscode/*
-!.vscode/extensions.json
 .idea
 .DS_Store
 *.suo
